<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/required_attributes"
    android:id="@+id/card_layout"
    android:layout_margin="@dimen/card_margin"
    android:background="@color/white"
    app:cardCornerRadius="@dimen/card_corner_radius"
    android:elevation="@dimen/card_elevation">
    
    <LinearLayout
       style="@style/required_attributes"
        android:orientation="vertical">
        
        <androidx.constraintlayout.widget.ConstraintLayout
      style="@style/required_attributes">
            <TextView
                android:id="@+id/tv_title"
               style="@style/required_attributes"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="@dimen/title_text_size"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/tv_note"
            style="@style/required_attributes"
            android:textAlignment="textStart"
            android:text="@string/note"
            android:textColor="@color/black"
            android:textSize="@dimen/noteDate_textSize"
            />
        <TextView
            android:id="@+id/tv_date"
            style="@style/required_attributes"
            android:textAlignment="textStart"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="@dimen/noteDate_textSize"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>